Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-24879

Client crash on undefined charsetsdir

    XMLWordPrintable

Details

    Description

      bash-5.1# mariadb --default-character-set=ascii -u dbadmin -p asterisk
      Enter password: 
      Welcome to the MariaDB monitor.  Commands end with ; or \g.
      Your MariaDB connection id is 429
      Server version: 10.5.8-MariaDB Source distribution
       
      Copyright (c) 2000, 2018, Oracle, MariaDB Corporation Ab and others.
       
      Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
       
      MariaDB [asterisk]> select * from blacklist;
      Segmentation fault
      

      Location of segfault:
      ---------------------
      in find_command (name=0x5555559e80c0 "select * from blacklist;") at /sources/mariadb-10.5.8/client/mysql.cc:2207
      due to Nullptr in charset_info

      Expected behavior:
      -----------------
      Sensible error message, about missing character-sets-dir vs. requested charset

      Workaround:
      -----------
      Specify option character-sets-dir on commandline or in (client) config file

      [client]
      character-sets-dir=/usr/share/mysql/charsets
      

      Attachments

        Activity

          People

            serg Sergei Golubchik
            mjo24 Michael Joost
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.25h
                0.25h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.