MDEV-24879 Client crash on undefined charsetsdir